--- a/helloWorld.html
+++ b/helloWorld.html
@@ -3,6 +3,6 @@
 <title>A starter test page for CEGE0043</title>
 </head>
 <body>
-Hello World - my name is Skylar, my databases user is user707 and my UCL username is ucestz7
+Hello World - my name is Skylar Zhang, my databases user is user46 and my UCL username is ucestz7
 </body>
 </html>
