--- a/leafletExample.html
+++ b/leafletExample.html
@@ -1,18 +1,39 @@
 <html>
-<head>
+    <head>
+        <!--code for Leaflet-->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+        integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+        crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"       
+        integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+        crossorigin=""></script>
 
+        <style type="text/css">
+            #mapid{height: 180px;}
+        </style>
+    </head>
+    <body>
+        <!--basic information DIV-->
+        <div>
+            This is my first HTML page
 
-<title>Leaflet and Javascript Example </title>
-</head>
+            My name is: Skylar
+            My UCL name is: ucestz7
+            My GitHub name is: Schatty6
+        </div>
 
-<body>
-<div>
-This is my first HTML Page
+        <!--the mapid div will hold the map -->
+        <div id="mapid" style="width:600px; height:400px"></div>
 
-My name is : Skylar
-My UCL username is: ucestz7
-My GitHub Name is: Schatty6
-
-</div>
-</body>
-</html>
+        <!-- the following script will load the map and set the default view and zoom, as well as loading the basemap tiles-->
+        <script>
+            'user strict';
+            let mymap;
+            mymap=L.map('mapid').setView([51.505,-0.09],13);
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                maxZoom:19,
+                attribution:'&copy;<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            }).addTo(mymap);
+        </script>
+    </body>
+    </html>
