--- a/leafletExample.html
+++ b/leafletExample.html
@@ -34,6 +34,26 @@
                 maxZoom:19,
                 attribution:'&copy;<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
             }).addTo(mymap);
+            // add circle 
+            L.circle([51.508, -0.11], 5000,{
+                color:'green',
+                fillColor:'#f03',
+                fillOpacity:0.8
+            }).addTo(mymap).bindPopup('This is a circle.');
+
+            console.log('added a circle');
+
+            // add a polygon
+            let myPolygon=L.polygon([
+            [51.709, -0.10],
+            [51.703, 0.07],
+            [51.22, 0.07],
+            [51.22, -0.057]
+        ],{
+            color:'orange',
+            fillColor:'#f03',
+            fillOpacity:0.5
+        }).addTo(mymap).bindPopup('This is a polygon in 2023.');
         </script>
     </body>
     </html>
