--- a/leafletExample.html
+++ b/leafletExample.html
@@ -32,7 +32,15 @@
             'user strict';
             let mymap;
             // global vairalbe to store the map
-            
+            // create a custom popup as a global variable
+            let popup=L.popup();
+            // create an event detector to wait for the user's click event and then use the popup to show them where they clicked
+             function onMapClick(e){
+                popup
+                    .setLatLng(e.latlng)
+                    .setContent('You click the map at'+e.latlng.toString())
+                    .openOn(mymap);
+             }
             function loadLeafletMap(){
                 console.log('This is at the start of the first function')
             mymap=L.map('mapid').setView([51.505,-0.09],13);
@@ -43,6 +51,8 @@
             console.log('Map created')
             // now call the code to add the markers
             addBasicMarkers();
+            // add the click event detector to the map
+            mymap.on('click',onMapClick);
             }// end code to add the leaflet map
 
             function addBasicMarkers(){
