--- a/leafletExample.html
+++ b/leafletExample.html
@@ -32,6 +32,8 @@
 
     <!--the mapid div will hold the map -->
     <div id="mapid" style="width:600px; height:400px"></div>
+    <button id="loadEarthquakeData" name="loadEarthquakeData" onclick="getEarthquakeData 
+()">Click here to load the Earthquake data </button>
 
 
     <!-- the following script will load the map and set the default view and zoom, as well as loading the basemap tiles-->
@@ -169,7 +171,7 @@
         }, false);
         function loadMap() {
             loadLeafletMap();
-            getEarthquakeData();
+            // getEarthquakeData();
         }
 
     </script>
