--- a/leafletExample.html
+++ b/leafletExample.html
@@ -32,8 +32,14 @@
 
     <!--the mapid div will hold the map -->
     <div id="mapid" style="width:600px; height:400px"></div>
+
     <button id="loadEarthquakeData" name="loadEarthquakeData" onclick="getEarthquakeData 
 ()">Click here to load the Earthquake data </button>
+
+    <button id="removeEarthquakeData" name="removeEarthquakeData" 
+    onclick="removeEarthquakeData()">Click here to remove the Earthquake data </button>
+
+    
 
 
     <!-- the following script will load the map and set the default view and zoom, as well as loading the basemap tiles-->
@@ -173,6 +179,9 @@
             loadLeafletMap();
             // getEarthquakeData();
         }
+    function removeEarthquakeData(){
+        alert('remove the earthquake data here');
+    }
 
     </script>
 </body>
