--- a/leafletExample.html
+++ b/leafletExample.html
@@ -49,6 +49,12 @@
     <button id="removeBusStopsData" name="removeBusStopsData" 
     onclick="removeBusStopsData()">Click here to remove the BusStops data </button>
 
+    <button id="loadEthernetCablesData" name="loadEthernetCablesData" onclick="getEthernetCablesData 
+()">Click here to load the EthernetCables data </button>
+
+    <button id="removeEthernetCablesData" name="removeEthernetCablesData" 
+    onclick="removeEthernetCablesData()">Click here to remove the EthernetCables data </button>
+
     
 
 
@@ -80,6 +86,14 @@
         try{
         alert('the BusStops data will be removed');
         mymap.removeLayer(BusStopsLayer);
+        }catch(err){
+            alert('Layer does not exist:'+err);
+        }
+    }
+    function removeEthernetCablesData(){
+        try{
+        alert('the EthernetCables data will be removed');
+        mymap.removeLayer(EthernetCables);
         }catch(err){
             alert('Layer does not exist:'+err);
         }
