Fixed bugs appered when removing layer

--- a/leafletExample.html
+++ b/leafletExample.html
@@ -12,7 +12,9 @@
     <script src="js/leaflet.awesome-markers.js"></script>
     <script src="js/basicMap.js"></script>
     <script src="js/earthquakes.js"></script>
+
     <script src="js/busstops.js"></script>
+
     <script src="js/ethernetcables.js"></script>
 
     <style type="text/css">
@@ -44,17 +46,13 @@
     <button id="removeEarthquakeData" name="removeEarthquakeData" onclick="removeEarthquakeData()">Click here to remove
         the Earthquake data </button>
 
-    <button id="loadBusStopsData" name="loadBusStopsData" onclick="getBusStopsData 
-()">Click here to load the BusStops data </button>
+    <button id="loadBusStopsData" name="loadBusStopsData" onclick="getBusStopsData()">Click here to load the BusStops data </button>
 
-    <button id="removeBusStopsData" name="removeBusStopsData" onclick="removeBusStopsData()">Click here to remove the
-        BusStops data </button>
+    <button id="removeBusStopsData" name="removeBusStopsData" onclick="removeBusStopsData()">Click here to remove the BusStops data </button>
 
-    <button id="loadEthernetCablesData" name="loadEthernetCablesData" onclick="getEthernetCablesData 
-()">Click here to load the EthernetCables data </button>
+    <button id="loadEthernetCablesData" name="loadEthernetCablesData" onclick="getEthernetCablesData()">Click here to load the EthernetCables data </button>
 
-    <button id="removeEthernetCablesData" name="removeEthernetCablesData" onclick="removeEthernetCablesData()">Click
-        here to remove the EthernetCables data </button>
+    <button id="removeEthernetCablesData" name="removeEthernetCablesData" onclick="removeEthernetCablesData()">Click here to remove the EthernetCables data </button>
 
 
 
