--- a/simpleHTMLwithStyleSheet.html
+++ b/simpleHTMLwithStyleSheet.html
@@ -21,7 +21,7 @@
         </div>
 
         <DIV style="height:100px;color:#FFFF00;background-color:#d0e4fe;">
-            <textarea> This is a text area which allows text on multiple lines </textarea>
+            <textarea rows="5"> This is a text area which allows text on multiple lines </textarea>
         </div>
 
         <DIV style="color:#FF0000;background-color:#00FF00;">
