adjusted the bootstrap template

--- a/leafletExample.html
+++ b/leafletExample.html
@@ -50,7 +50,7 @@
 
     <button id="removeBusStopsData" name="removeBusStopsData" onclick="removeBusStopsData()">Click here to remove the BusStops data </button>
 
-    <button id="loadEthernetCablesData" name="loadEthernetCablesData" onclick="getEthernetCablesData()">Click here to load the EthernetCables data </button>
+    <button id="loadEthernetCablesData" name="loadEthernetCablesData" onclick="getEthernetCables()">Click here to load the EthernetCables data </button>
 
     <button id="removeEthernetCablesData" name="removeEthernetCablesData" onclick="removeEthernetCablesData()">Click here to remove the EthernetCables data </button>
 
