--- a/bootStrap.html
+++ b/bootStrap.html
@@ -58,12 +58,12 @@
                     </div>
                     <div class="ms-3">
                         <h6 class="mb-0">CEGE0043 App</h6>
-                        <span>Your GitHub Username</span>
+                        <span>Schatty6</span>
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
         <!-- Nav Item - Pages Collapse Menu -->
-          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="" onclick="alert('menu 1 clicked');" aria-expanded="true" aria-controls="collapseOne">
+          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="" onclick="menu1()" aria-expanded="true" aria-controls="collapseOne">
             <!-- the next line is the cog image -->
             <i class="fas fa-fw fa-cog"></i>
             <span>Menu 1</span>
@@ -139,7 +139,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/icon.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">Your UCL Username</span>
+                            <span class="d-none d-lg-inline-flex">ucestz7</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
@@ -174,6 +174,8 @@
 
     <!-- Template Javascript -->
     <script src="js/bootstrapTemplate.js"></script>
+    <script src="js/menu.js"></script>
+
 </body>
 
 </html>
