--- a/bootStrap.html
+++ b/bootStrap.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>CEGE0043 Bootstrap</title>
@@ -14,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -31,10 +32,11 @@
 
 </head>
 
-<body onload="loadMap()" > 
+<body onload="loadMap()">
     <div class="container-xxl position-relative bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner"
+            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -48,65 +50,75 @@
                 <a href="#" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i></h3>
                 </a>
-              <a href="#" class="sidebar-toggler flex-shrink-0 d-lg-none">
+                <a href="#" class="sidebar-toggler flex-shrink-0 d-lg-none">
                     <i class="fa fa-bars"></i>
-             </a>
+                </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
                         <img class="rounded-circle" src="img/icon.jpg" alt="" style="width: 40px; height: 40px;">
-                        <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
+                        <div
+                            class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1">
+                        </div>
                     </div>
                     <div class="ms-3">
                         <h6 class="mb-0">CEGE0043 App</h6>
                         <span>Schatty6</span>
                     </div>
                 </div>
-                <div class="navbar-nav w-100">
-        <!-- Nav Item - Pages Collapse Menu -->
-          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="" onclick="menu1()" aria-expanded="true" aria-controls="collapseOne">
-            <!-- the next line is the cog image -->
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Menu 1</span>
-          </a>
+                <div class="nav-item dropdown d-none d-lg-block">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                            class="fa fa-laptop me-2"></i>Menu 11</a>
+                    <div class="dropdown-menu bg-transparent border-0">
+                        <a class="dropdown-item" class="dropdown-item" href="#" onclick="popAlert_12()" ;>Menu
+                            12</a>
+                        <a class="dropdown-item" class="dropdown-item" href="#" onclick="popAlert_13()";>Menu
+                            13</a>
+                    </div>
+                </div>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider">
-        <!-- Nav Item - Pages Collapse Menu -->
-            <div class="nav-item dropdown d-lg-none">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Menu 2</a>            
-            <div class="dropdown-menu bg-transparent border-0">
-              <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu3')";>Menu 3</a>
-              <a class="dropdown-item" class="dropdown-item" href="#" 
-              onclick="alert('menu4');">Menu 4</a>
-            </div>
-          </div>
+                    <!-- Divider -->
+                    <hr class="sidebar-divider">
+                    <!-- Nav Item - Pages Collapse Menu -->
+                    <div class="nav-item dropdown d-none d-sm-block">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                                class="fa fa-laptop me-2"></i>Menu 14</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="popAlert_15()" ;>Menu
+                                15</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="popAlert_16()";>Menu
+                                16</a>
+                        </div>
+                    </div>
 
-        <!-- Nav Item - Pages Collapse Menu -->
-        <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Menu 5</a>            
-            <div class="dropdown-menu bg-transparent border-0">
-              <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu6')";>Menu 6</a>
-              <a class="dropdown-item" class="dropdown-item" href="#" 
-              onclick="alert('menu7');">Menu 7</a>
-            </div>
-          </div>
-        <!-- Nav Item - Pages Collapse Menu -->
-        <div class="nav-item dropdown d-sm-none">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Menu 8</a>            
-            <div class="dropdown-menu bg-transparent border-0">
-              <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu9')";>Menu 9</a>
-              <a class="dropdown-item" class="dropdown-item" href="#" 
-              onclick="alert('menu10');">Menu 10</a>
-            </div>
-          </div>
-        </nav>
+                    <!-- Nav Item - Pages Collapse Menu -->
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                                class="fa fa-laptop me-2"></i>Menu 5</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu6')" ;>Menu
+                                6</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu7');">Menu 7</a>
+                        </div>
+                    </div>
+                    <!-- Nav Item - Pages Collapse Menu -->
+                    <div class="nav-item dropdown d-sm-none">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                                class="fa fa-laptop me-2"></i>Menu 8</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu9')" ;>Menu
+                                9</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu10');">Menu
+                                10</a>
+                        </div>
+                    </div>
+            </nav>
         </div>
         <!-- Sidebar End -->
 
 
         <!-- Content Start -->
-           <div id = "wrapper" class="content d-flex flex-column" >
-        
+        <div id="wrapper" class="content d-flex flex-column">
+
             <!-- Navbar Start -->
             <nav class="navbar bg-light navbar-expand flex-top py-0 px-4">
                 <a href="#" class="navbar-brand d-flex d-lg-none me-4">
@@ -114,9 +126,10 @@
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
-                </a> 
+                </a>
                 <form class="d-none d-md-flex ms-4">
-                    <input class="form-control border-0" type="search" placeholder="Search" onclick="alert('Placeholder for search');">
+                    <input class="form-control border-0" type="search" placeholder="Search"
+                        onclick="alert('Placeholder for search');">
                 </form>
                 <div class="navbar-nav align-items-right ms-auto">
                     <div class="nav-item dropdown">
@@ -138,7 +151,8 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img class="rounded-circle me-lg-2" src="img/icon.jpg" alt="" style="width: 40px; height: 40px;">
+                            <img class="rounded-circle me-lg-2" src="img/icon.jpg" alt=""
+                                style="width: 40px; height: 40px;">
                             <span class="d-none d-lg-inline-flex">ucestz7</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
@@ -150,15 +164,15 @@
 
                 </div>
             </nav><!-- Navbar End -->
-                <div id="mapid" class="vh-100 vw-100" style="z-index: 0;"  ></div>
-              <!-- z-index = 0 is required to ensure that the menu items from the template
+            <div id="mapid" class="vh-100 vw-100" style="z-index: 0;"></div>
+            <!-- z-index = 0 is required to ensure that the menu items from the template
                 appear on top of the map -->
             <!--    <div class="col-md-6 col-sm-12 map-container rounded flex-fill" id="mapid"></div>  -->
 
 
 
-</div> <!-- content -->
-</div> 
+        </div> <!-- content -->
+    </div>
 
 
     <!-- JavaScript Libraries -->
