--- a/bootStrap.html
+++ b/bootStrap.html
@@ -34,7 +34,13 @@
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <!--menu functionality-->
+    <script src="js/menu.js"></script>
+    <!-- track location -->
 
+    <script src="js/basicMap.js"></script>
+    <script src="js/getLocation.js"></script>
+    <script src="js/trackLocation.js"></script>
 </head>
 
 <body onload="loadMap()">
@@ -100,26 +106,15 @@
                     </div>
 
                     <!-- Nav Item - Pages Collapse Menu -->
-                    <div class="nav-item dropdown">
+                    <div class="nav-item dropdown d-sm-block d-md-none">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
-                                class="fa fa-laptop me-2"></i>Menu 5</a>
+                                class="fa fa-laptop me-2"></i>Tracking</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu6')" ;>Menu
-                                6</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu7');">Menu 7</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="trackLocation()";>Switch tracking on</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Switch tracking off</a>
                         </div>
                     </div>
-                    <!-- Nav Item - Pages Collapse Menu -->
-                    <div class="nav-item dropdown d-sm-none">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
-                                class="fa fa-laptop me-2"></i>Menu 8</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu9')" ;>Menu
-                                9</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="alert('menu10');">Menu
-                                10</a>
-                        </div>
-                    </div>
+                   
             </nav>
         </div>
         <!-- Sidebar End -->
@@ -177,6 +172,8 @@
             <!-- z-index = 0 is required to ensure that the menu items from the template
                 appear on top of the map -->
             <!--    <div class="col-md-6 col-sm-12 map-container rounded flex-fill" id="mapid"></div>  -->
+            <!--show user's location-->
+            <div id="showLocation"></div>
 
 
 
@@ -197,16 +194,12 @@
 
     <!-- Template Javascript -->
     <script src="js/bootstrapTemplate.js"></script>
-    <!--menu functionality-->
-    <script src="js/menu.js"></script>
-    <!-- track location -->
-
-    <script src="js/basicMap.js"></script>
-    <script src="js/getLocation.js"></script>
+    
     <!--show map-->
     <script>
         function loadMap() {
-            loadLeafletMap();   // get map
+            loadLeafletMap(); 
+            showPosition();  // get map
         }
     </script>
 </body>
