--- a/bootStrap.html
+++ b/bootStrap.html
@@ -114,6 +114,22 @@
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Switch tracking off</a>
                         </div>
                     </div>
+                    <!-- Nav Item - Pages Collapse Menu -->
+                    <div class="nav-item dropdown d-block">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                                class="fa fa-laptop me-2"></i>Centennial</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadBuildings()";>Load Buildings</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeBuildings()";>Remove Buildings</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadEthernetCables()";>Load ethernet cables</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove ethernet cables</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Load rooms</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove rooms</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Load sensors</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove sensors</a>
+
+                        </div>
+                    </div>
                    
             </nav>
         </div>
