Adjusted function of menu according to menu structures

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -122,11 +122,11 @@
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadBuildings()";>Load Buildings</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeBuildings()";>Remove Buildings</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadEthernetCables()";>Load ethernet cables</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove ethernet cables</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Load rooms</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove rooms</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Load sensors</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removePositionPoints()";>Remove sensors</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeEthernetCables()";>Remove ethernet cables</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadRooms()";>Load rooms</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeRooms()";>Remove rooms</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadSensors()";>Load sensors</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeSensors()";>Remove sensors</a>
 
                         </div>
                     </div>
