--- a/bootStrap.html
+++ b/bootStrap.html
@@ -41,6 +41,7 @@
     <script src="js/basicMap.js"></script>
     <script src="js/getLocation.js"></script>
     <script src="js/trackLocation.js"></script>
+    <script src="js/centennial.js"></script>
 </head>
 
 <body onload="loadMap()">
@@ -128,6 +129,15 @@
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadSensors()";>Load sensors</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeSensors()";>Remove sensors</a>
 
+                        </div>
+                    </div>
+                    <!-- Nav Item - Pages Collapse Menu -->
+                    <div class="nav-item dropdown d-none d-lg-block">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                                class="fa fa-laptop me-2"></i>Graphs</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="showGraph()";>Show Graph</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeGraph()";>Remove Graph</a>
                         </div>
                     </div>
                    
