created a div for mapWrapper to replace the original mapid div

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -194,7 +194,14 @@
 
                 </div>
             </nav><!-- Navbar End -->
-            <div id="mapid" class="vh-100 vw-100" style="z-index: 0;"></div>
+            
+            <!--div id="mapid" class="vh-100 vw-100" style="z-index: 0;"--><!--/div>
+            <!--mapWrapper-->
+            <div id="mapWrapper" class="col vh-100 collapse show" aria-expanded="true" 
+            style="margin-top:65px; z-order:0">
+             <div id="mapid" style="height:calc(100% - 65px);">
+             </div> <!-- map id -->
+             </div> <!-- map wrapper -->
             <!-- z-index = 0 is required to ensure that the menu items from the template
                 appear on top of the map -->
             <!--    <div class="col-md-6 col-sm-12 map-container rounded flex-fill" id="mapid"></div>  -->
