added source of graph in the html file

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -42,6 +42,7 @@
     <script src="js/getLocation.js"></script>
     <script src="js/trackLocation.js"></script>
     <script src="js/centennial.js"></script>
+    <script src="js/graph.js"></script>
 </head>
 
 <body onload="loadMap()">
