added functions to show and remove graph divs

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -37,6 +37,8 @@
     <!--menu functionality-->
     <script src="js/menu.js"></script>
     <!-- track location -->
+    <!--link to d3 library-->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 
     <script src="js/basicMap.js"></script>
     <script src="js/getLocation.js"></script>
@@ -147,7 +149,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
                                 class="fa fa-laptop me-2"></i>Graphs</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="showGraph()" ;>Show
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadGraph()" ;>Show
                                 Graph</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeGraph()" ;>Remove
                                 Graph</a>
