--- a/bootStrap.html
+++ b/bootStrap.html
@@ -151,7 +151,7 @@
                         <div class="dropdown-menu bg-transparent border-0">
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadGraph()" ;>Show
                                 Graph</a>
-                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeGraph()" ;>Remove
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="closeAssetData()" ;>Remove
                                 Graph</a>
                         </div>
                     </div>
