changed the height of the mapid wrapper from calc(100%- 65px)to 850px to fix the issue that the map does not show on the webpage after replace the original map <div> with a wrapper.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -216,14 +216,17 @@
             <!--mapWrapper-->
             <div id="mapWrapper" class="col vh-100 collapse show" aria-expanded="true"
                 style="margin-top:65px; z-order:0">
-                <div id="mapid" style="height:calc(100% - 65px);">
+                <div id="mapid" style="height:850px;" >
                 </div> <!-- map id -->
             </div> <!-- map wrapper -->
+            <!-- store the graph -->>
             <div id="assetDataWrapperWrapper" class="col vh-100 collapse hide"
                 style="background-color:lightgray; margin-top:65px;z-order:0">
                 <div id="assetDataWrapper" style="height:calc(100% - 65px);">
                 </div> <!-- asset data wrapper -->
             </div> <!-- asset data wrapper wrapper wrapper -->
+            <!--end of the wrapper part-->
+            
             <!-- z-index = 0 is required to ensure that the menu items from the template
                 appear on top of the map -->
             <!--    <div class="col-md-6 col-sm-12 map-container rounded flex-fill" id="mapid"></div>  -->
