--- a/bootStrap.html
+++ b/bootStrap.html
@@ -131,6 +131,10 @@
                                 Buildings</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeBuildings()" ;>Remove
                                 Buildings</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadUniversities()" ;>Load
+                                Universities</a>
+                            <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeUniversities()" ;>Remove
+                                Universities</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="loadEthernetCables()"
                                 ;>Load ethernet cables</a>
                             <a class="dropdown-item" class="dropdown-item" href="#" onclick="removeEthernetCables()"
@@ -210,15 +214,18 @@
                     </div>
 
                 </div>
-            </nav><!-- Navbar End -->
+            </nav>
+            <!-- Navbar End -->
 
+            <!--map div-->
             <!--div id="mapid" class="vh-100 vw-100" style="z-index: 0;"--><!--/div>
             <!--mapWrapper-->
             <div id="mapWrapper" class="col vh-100 collapse show" aria-expanded="true"
                 style="margin-top:65px; z-order:0">
                 <div id="mapid" style="height:850px;" >
                 </div> <!-- map id -->
-            </div> <!-- map wrapper -->
+            </div> 
+            <!-- map wrapper -->
             <!-- store the graph -->>
             <div id="assetDataWrapperWrapper" class="col vh-100 collapse hide"
                 style="background-color:lightgray; margin-top:65px;z-order:0">
@@ -226,7 +233,8 @@
                 </div> <!-- asset data wrapper -->
             </div> <!-- asset data wrapper wrapper wrapper -->
             <!--end of the wrapper part-->
-            
+            <!--graph wrapper-->
+
             <!-- z-index = 0 is required to ensure that the menu items from the template
                 appear on top of the map -->
             <!--    <div class="col-md-6 col-sm-12 map-container rounded flex-fill" id="mapid"></div>  -->
@@ -257,7 +265,7 @@
     <script>
         function loadMap() {
             loadLeafletMap();
-            showPosition();  // get map
+            
         }
     </script>
 </body>
