Added a button to save asset

--- a/assetForm.html
+++ b/assetForm.html
@@ -25,8 +25,11 @@
     <br />
     <br />
 
-
-
+    <p>Click here to save the data</p>
+    <button id="saveAsset" onclick="saveNewAsset()">Save asset</button>
+    <br />
+    <br />
+    
     
 
 
