Added a from to input the delete id and a button to call the function in the assetCreation.js file so that the result of delete operation will be shown in the webpage.

--- a/assetForm.html
+++ b/assetForm.html
@@ -34,8 +34,8 @@
     <hr>
     <hr>
 
-    <label for="deleteID">Delete ID</label><input type="text" size="25" id="deleteID" /><br />
-    <button id="startDelete" onclick="deleteRecord()">Delete Record</button>
+    <label for="deleteAsset">Delete ID</label><input type="text" size="25" id="deleteAsset" /><br />
+    <button id="deleteAsset" onclick="deleteSingleAsset()">Delete Asset</button>
     <div id="dataDeleteResult">The result of the delete operation goes here</div>
 
     
