Created a funciton popCaller() in the menu.js file to alter the name of function when menus are clicked. In  this way the menus are working as place holders.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -103,10 +103,10 @@
                     <!--Menu items for Asset Location-->
 
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" conclick="popCaller()">List of Assets in Best Condition <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#" onclick="popCaller()">List of Assets in Best Condition <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" conclick="popCaller()">Daily Reporting Rates Graph- All Users <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#" onclick="popCaller()">Daily Reporting Rates Graph- All Users <span class="sr-only">(current)</span></a>
                     </li>
                     <!--Menu for condition Assessment-->
                     <li class="nav-item active">
@@ -131,7 +131,7 @@
                         <a class="nav-link" href="#" onclick="popCaller()">Add Layer - not rated in the last 3 days <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" onclick="popAlert_15()">Remove Layer - not rated in the last 3 days <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#" onclick="popCaller()">Remove Layer - not rated in the last 3 days <span class="sr-only">(current)</span></a>
                     </li>
                     
 
