Added function setMapClickEvent() in the basicMap.js file to make the onlick function of the point behave differently with click functionality.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -108,6 +108,8 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#" onclick="popCaller()">Daily Reporting Rates Graph- All Users <span class="sr-only">(current)</span></a>
                     </li>
+                    <!-- Divider -->
+                    <hr class="sidebar-divider">
                     <!--Menu for condition Assessment-->
                     <li class="nav-item active">
                         <a class="nav-link" href="#" onclick="popCaller()">Help <span class="sr-only">(current)</span></a>
