Added the setMapClickEvent function into the html window onload funcion. So now when the web page is loaded the hard coded geoJSON can be seen.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -315,6 +315,8 @@
     <script>
         function loadMap() {
             loadLeafletMap();
+            //map click event
+            setMapClickEvent();
 
         }
     </script>
