Instead of adding the mapclickevent function after resize function, added it in the loadMap funtion so event setting function works when the webpage is loaded.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -334,6 +334,8 @@
             console.log('Map created')
             // add the click event detector to the map
             mymap.on('click', onMapClick);
+            window.addEventListener('resize', setMapClickEvent);
+            setMapClickEvent();
         }
     </script>
 </body>
