--- a/bootStrap.html
+++ b/bootStrap.html
@@ -103,7 +103,7 @@
                     <!--medium, large and extra large-->
 
                     <li class="nav-item active d-none d-md-block">
-                        <a class="nav-link" href="#" onclick="popCaller()">List of Assets in Best Condition <span
+                        <a class="nav-link" href="#" onclick="assetInBestCondition()">List of Assets in Best Condition <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-none d-md-block">
