--- a/bootStrap.html
+++ b/bootStrap.html
@@ -107,7 +107,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-none d-md-block">
-                        <a class="nav-link" href="#" onclick="popCaller()">Daily Reporting Rates Graph- All Users <span
+                        <a class="nav-link" href="#" onclick="dailyReportingRatesGraph()">Daily Reporting Rates Graph- All Users <span
                                 class="sr-only">(current)</span></a>
                     </li>
 
