--- a/bootStrap.html
+++ b/bootStrap.html
@@ -114,7 +114,7 @@
                     <!--Menu for condition Assessment-->
                     <!-- small and extra small-->
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Help <span
+                        <a class="nav-link" href="#" onclick="help()">Help <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
