--- a/bootStrap.html
+++ b/bootStrap.html
@@ -118,7 +118,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">User Ranking <span
+                        <a class="nav-link" href="#" onclick="getUserRanking()">User Ranking <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
