--- a/bootStrap.html
+++ b/bootStrap.html
@@ -122,7 +122,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Add Layer -5 closest assets <span
+                        <a class="nav-link" href="#" onclick="get5ClosestAssets()">Add Layer -5 closest assets <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
