--- a/bootStrap.html
+++ b/bootStrap.html
@@ -126,7 +126,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Remove Layer -5 closest assets <span
+                        <a class="nav-link" href="#" onclick="remove5ClosestAssets()">Remove Layer -5 closest assets <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
