--- a/bootStrap.html
+++ b/bootStrap.html
@@ -130,7 +130,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Add Layer -last 5 reports,color coded <span
+                        <a class="nav-link" href="#" onclick="addLast5Reports()">Add Layer -last 5 reports,color coded <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
