Added 'removeLast5Reports()' funtion in the menu.js for the menu to remove 5 last reports when clicked (for now the function will only alert user the name of function.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -134,7 +134,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Remove layer -last 5 reports <span
+                        <a class="nav-link" href="#" onclick="removeLast5Reports()">Remove layer -last 5 reports <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
