--- a/bootStrap.html
+++ b/bootStrap.html
@@ -138,7 +138,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Add Layer - not rated in the last 3 days
+                        <a class="nav-link" href="#" onclick="addNotRated()">Add Layer - not rated in the last 3 days
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
