--- a/bootStrap.html
+++ b/bootStrap.html
@@ -142,7 +142,7 @@
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active d-sm-block d-md-none">
-                        <a class="nav-link" href="#" onclick="popCaller()">Remove Layer - not rated in the last 3 days
+                        <a class="nav-link" href="#" onclick="removeNotRated()">Remove Layer - not rated in the last 3 days
                             <span class="sr-only">(current)</span></a>
                     </li>
 
