Create a Javascript file called uploadData.js, reference it from the bootStrap.html page.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -46,6 +46,7 @@
     <script src="js/centennial.js"></script>
     <script src="js/graph.js"></script>
     <script src="js/utilities.js"></script>
+    <script src="js/uploadData.js"></script>
 
 </head>
 
