Added function getUserId() to retrive userID information from API endpoint /userId. The function is included in the onload function list of the webpage so it will be used when the web is loaded. Now the user_id is stored as a constant to be used latter.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -337,6 +337,7 @@
             mymap.on('click', onMapClick);
             window.addEventListener('resize', setMapClickEvent);
             setMapClickEvent();
+            getUserId();
         }
     </script>
 </body>
