--- a/bootStrap.html
+++ b/bootStrap.html
@@ -47,7 +47,7 @@
     <script src="js/graph.js"></script>
     <script src="js/utilities.js"></script>
     <script src="js/uploadData.js"></script>
-    
+    <script src="js/leaflet.awesome-markers.js"></script>
 
 </head>
 
