Changed the menu funciton dailyReportingRatesGraph() to loadGraph(). The height of 'assetDataWrapper' element in bootStrap.html was changed accordingly so the value of d3 graph size will not be negative. So far, when user click on the menu Daily reporting rates graph- all users, a graph demo will show.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -295,7 +295,7 @@
             <!-- store the graph -->>
             <div id="assetDataWrapperWrapper" class="col vh-100 collapse hide"
                 style="background-color:lightgray; margin-top:65px;z-order:0">
-                <div id="assetDataWrapper" style="height:calc(100% - 65px);">
+                <div id="assetDataWrapper" style="height: 700px;">
                 </div> <!-- asset data wrapper -->
             </div> <!-- asset data wrapper wrapper wrapper -->
             <!--end of the wrapper part-->
