--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,29 @@
 <DOCTYPE html>
 
-    
+    <head>
+        <title>Hello Cesium!</title>
+        <script src="Build/Cesium/Cesium.js"></script>
+        <style>
+            @import url(Build/Cesium/Widgets/widgets.css);
+
+            html,
+            body,
+            #cesiumContainer {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+            }
+
+            .toolbar-left {
+                display: block;
+                position: absolute;
+                top: 5px;
+                left: 5px;
+            }
+        </style>
+
+
+
+    </head>
