--- a/dashboard.html
+++ b/dashboard.html
@@ -39,10 +39,9 @@
         <script src="./assets/js/charts-bars.js" defer></script>
     </head>
 
-    <body>
-        <!--div id="cesiumContainer"></div>
-        <!--dashboard template-->
-        <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen}">
+    <body>        
+    <!--dashboard template-->
+    <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen}">
     <!-- Desktop sidebar -->
     <aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0">
       <div class="py-4 text-gray-500 dark:text-gray-400">
@@ -221,6 +220,7 @@
     </aside>
     <!--main screen container-->
     <div class="flex flex-col flex-1">
+        <!--Header-->
         <header class="z-10 py-4 bg-white shadow-md dark:bg-gray-800">
           <div
             class="container flex items-center justify-between h-full px-6 mx-auto text-purple-600 dark:text-purple-300">
@@ -259,10 +259,11 @@
             </ul>
           </div>
         </header>
+        <!--Main area of screen-->
         <main class="h-full pb-16 overflow-y-auto">
           <div class="container px-6 mx-auto grid">
             <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
-              Charts
+              Graphs of Asset Information
             </h2>
             <!-- CTA -->
             <a class="flex items-center justify-between p-4 mb-8 text-sm font-semibold text-purple-100 bg-purple-600 rounded-lg shadow-md focus:outline-none focus:shadow-outline-purple"
@@ -273,11 +274,11 @@
                     d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z">
                   </path>
                 </svg>
-                <span>Star this project on GitHub</span>
+                <span>The GitHub Repository of this dashboard template</span>
               </div>
               <span>View more &RightArrow;</span>
             </a>
-  
+            <!--Description of charts below, adapted accordingly-->
             <p class="mb-8 text-gray-600 dark:text-gray-400">
               Charts are provided by
               <a class="text-purple-600 dark:text-purple-400 hover:underline" href="https://www.chartjs.org/">
@@ -287,7 +288,7 @@
               provide a description for your charts in HTML. See source code for
               examples.
             </p>
-  
+            <!--Charts-->  
             <div class="grid gap-6 mb-8 md:grid-cols-2">
               <!-- Doughnut/Pie chart -->
               <div class="min-w-0 p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
@@ -347,6 +348,9 @@
                   </div>
                 </div>
               </div>
+              <!--cesium-->
+              <div id="cesiumContainer" href="cesium.html"></div>
+
             </div>
           </div>
         </main>
