Linked the dashboard.html page to the Dashboard button in the drop down menu list on the right top screen. By doing so, the user can get redirected to the dashboard to see assets information visualisation by clicking the menu.@

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -258,9 +258,9 @@
                                 <small>Data Collection</small>
                             </a>
                             <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Help 2</h6>
-                                <small>Admin Functionality</small>
+                            <a href="dashboard.html" class="dropdown-item">
+                                <h6 class="fw-normal mb-0">Dashboard</h6>
+                                <small>Assets Visulisations </small>
                             </a>
                         </div>
                     </div>
