--- a/dashboard.html
+++ b/dashboard.html
@@ -1,8 +1,10 @@
 <DOCTYPE html>
 <html :class="{ 'theme-dark': dark }" x-data="data()" lang="en"></html>
     <head>
-        <title>CEGE0043 Asset Dashboard</title>
+        <title>CEGE0043 Asset Dashboard</title>        
         <script src="Build/Cesium/Cesium.js"></script>
+        <script src="js/requestData.js"></script> 
+        <script src="js/graph.js"></script>
         <style>
             @import url(Build/Cesium/Widgets/widgets.css);
 
