--- a/bootStrap.html
+++ b/bootStrap.html
@@ -49,6 +49,7 @@
     <script src="js/graph.js"></script>
     <script src="js/utilities.js"></script>
     <script src="js/uploadData.js"></script>
+    <script src="js/requestData.js"></script>
     
 
 </head>
